syntax = "proto3";
package DomainServices.DocumentOnSAService.RefreshElectronicDocExternalId;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "Enums.proto";

message RefreshElectronicDocExternalIdRequest {
	
	string ExternalIdESignatures = 1;

	DomainServices.DocumentOnSAService.Enums.Operation Operation = 6;
}