syntax = "proto3";
package DomainServices.DocumentOnSAService.SignDocument;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";

message SignDocumentRequest{

	google.protobuf.Int32Value DocumentOnSAId = 1;

	google.protobuf.Int32Value SignatureTypeId = 2;
} 

